# dualtext

./: .env.prod.example  .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.prod.yml  manage.py  requirements.txt  vetur.config.js
dualtext/: asgi.py  (+3 more)
dualtext_client/: annotation.py  annotation_group.py  api_base.py  cli_auth.py  cli_corpus.py  cli_crud.py  cli_label.py  cli_project.py  corpus.py  document.py  dualtext.py  feature.py  label.py  project.py  project_from_scratch_schema.json  requirements.txt  session.py  settings.py  setup.cfg  setup.py  task.py  test_data.json
dualtext_client/DualtextCli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dualtext_client/cli/: dualtext.py  setup.py
dualtext_client/client_lib/: annotation.py  annotation_group.py  api_base.py  corpus.py  document.py  dualtext.py  feature.py  label.py  project.py  search.py  session.py  setup.py  task.py
dualtext_client/client_lib/dualtext.egg-info/: PKG-INFO  SOURCES.txt
dualtext_client/client_lib/dualtext_client.egg-info/: PKG-INFO  SOURCES.txt
dualtext_client/examples/: create_from_scratch_w_groups.json
dualtext_client/examples/create_from_search/: create_from_search.json
dualtext_client/examples/simple_annotation/: data_transformation.py
dualtext_client/schemas/: annotation.schema.json  annotation_filter.schema.json  annotation_group.schema.json  corpus.schema.json  document.schema.json  label.schema.json  project.schema.json  project_from_documents.schema.json  project_from_scratch.schema.json  task.schema.json  task_filter.schema.json
(+270 files in other folders)
