[metadata]
name = dualtext-cli
version = 0.0.0
url = https://github.com/mathislucka/dualtext
description = CLI to interact with the dualtext annotation tool
author = Mathis Lucka
license = MIT
license_file = LICENSE
platforms = any

[options]
use_scm_version = True
python_requires = >=3.7, <4
packages = find:
setup_requires =
    setuptools
install_requires =
    click
    jsonschema
    keyring
    requests

[options.entry_points]
console_scripts =
    dualtext=dualtext:cli

;[options.extras_require]
;sql =
;    sqlalchemy>=1.4.2,<2
;    sqlalchemy_utils
;    psycopg2-binary; sys_platform != 'win32' and sys_platform != 'cygwin'